fixed footlong image cropping

--- a/app/less/components.less
+++ b/app/less/components.less
@@ -2151,6 +2151,7 @@ input[type="text"]#locationSelectionInput {
       z-index: 8;
       left: 25px;
       top: 25px;
+	  max-width: none;
     }
 
     .itemInfo {
